change the header

--- a/index.html
+++ b/index.html
@@ -27,19 +27,25 @@
     <table class="navigation">
         <tr>
             <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">Home</a>
+                <a class="Overview" title="Conference Home Page" href=".">Overview</a>
             </td>
             <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
+                <a title="Schedule" href="schedule">Schedule</a>
             </td>
             <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
+                <a title="Speakers" href="speakers">Speakers</a> 
             </td>
             <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
+                <a title="Call for Papers" href="call-for-papers">Call for Papers</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="Organizers" href="organizers">Organizers</a>
+            </td>
+            <td class="navigation">
+                <a title="Accepted Papers" href="acceted-papers">Accepted Papers</a>
+            </td>
+            <td class="navigation">
+                <a title="Committee" href="committee">Committee</a>
             </td>
         </tr>
     </table>
