--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Structured Knowledge for LLMs">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <title>Structured Knowledge for Large Language Models</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Structured Knowledge for LLMs</span>
         </div>
         <div class="bottom-right">
             June 31, 2525 <br> University Name, and City Maybe
