add profile pics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,49 @@
         </tr>
     </table>
 
-    <h2>Coming Soon</h2>
+    <h2>Organizers</h2>
+<div class="organizers-layout">
+    <div>
+        <img src="assets/organizers/qizhu_pic.jpg" alt="Organizer 1">
+        <p><strong>Qi Zhu</strong><br>Amazon Web Services</p>
+    </div>
+    <div>
+        <img src="assets/organizers/xiusi_pic.jpg" alt="Organizer 2">
+        <p><strong>Xiusi Chen</strong><br>UIUC</p>
+    </div>
+    <div>
+        <img src="assets/organizers/yuzhang_pic.jpg" alt="Organizer 3">
+        <p><strong>Yu Zhang</strong><br>Texas A&M University</p>
+    </div>
+    <div>
+        <img src="assets/organizers/soji_pic.jpg" alt="Organizer 4">
+        <p><strong>Soji Adeshina</strong><br>Amazon Web Services</p>
+    </div>
+    <div>
+        <img src="assets/organizers/costas.jpeg" alt="Organizer 5">
+        <p><strong>Costas Mavromatis</strong><br>Amazon Web Services</p>
+    </div>
+    <div>
+        <img src="assets/organizers/zhen.jpg" alt="Organizer 6">
+        <p><strong>Zhen Han</strong><br>Amazon Web Services</p>
+    </div>
+    <div>
+        <img src="assets/organizers/vassilis.png" alt="Organizer 7">
+        <p><strong>Vassilis N. Ioannidis</strong><br>Amazon Web Services</p>
+    </div>
+    <div>
+        <img src="assets/organizers/leman.jpg" alt="Organizer 8">
+        <p><strong>Leman Akoglu</strong><br>Carnegie Mellon University</p>
+    </div>
+    <div>
+        <img src="assets/organizers/danai.webp" alt="Organizer 9">
+        <p><strong>Danai Koutra</strong><br>University of Michigan</p>
+    </div>
+    <div>
+        <img src="assets/organizers/huzefa.jpg" alt="Organizer 10">
+        <p><strong>Huzefa Rangwala</strong><br>Amazon Web Services</p>
+    </div>
+</div>
 
     <footer>
         &copy; SKnowLLM Conference Organizers
