--- a/speakers.html
+++ b/speakers.html
@@ -34,7 +34,31 @@
         </tr>
     </table>
 
-    <h2>Coming Soon</h2>
+    <h2>Speakers</h2>
+    <div class="speaker-layout">
+        <img src="assets/speakers/Jiawei.jpeg" alt="Jiawei Han">
+        <p>
+            <strong>Dr. Jiawei Han</strong> is a Michael Aiken Chair Professor in the Department of Computer Science at the University of Illinois. 
+            He has been working on research into data mining, information network analysis, data warehousing, stream mining, spatiotemporal and multimedia data mining, text and Web mining, and software bug mining, with over 400 conference and journal publications. 
+            He has chaired or served in over 100 program committees of international conferences and workshops. He is a Fellow of ACM and IEEE. His book “Data Mining: Concepts and Techniques” (Morgan Kaufmann) has been used worldwide as a textbook. Jiawei's research focuses on discovering effective methods for mining structures from massive unstructured text data and has developed practical and scalable methods.
+        </p>
+
+        
+    </div>
+
+    <div class="speaker-layout">
+    <img src="assets/speakers/bryan.png" alt="Bryan Perozzi">
+        <p>
+            <strong>Dr. Bryan Perozzi</strong> is a Research Scientist at Google, working at the intersection of data mining, machine learning, and language models. He received the  2024 KDD Test of Time Award and the 2017 SIGKDD Dissertation Award for his pioneering work in network representation learning, particularly in the development of DeepWalk, one of the foundational algorithms for learning embeddings from graphs. His research has been widely influential, with numerous papers published in top-tier venues such as NeurIPS, ICML, KDD, and WWW, accumulating over 19,800 citations.
+            His recent research focuses on advancing graph reasoning capabilities in large language models (LLMs).
+        </p>
+    </div>
+    <div class="speaker-layout">
+        <img src="assets/speakers/luna.png" alt="Xin Luna Dong">
+        <p>
+            <strong>Dr. Xin Luna Dong</strong> is a Principal Scientist at Meta Reality Labs, leading the ML efforts in building an intelligent personal assistant. We innovate and productionize techniques on contextual AI, multi-modal conversations, search, question answering, recommendation and personalization, knowledge collection and mining. Dong was the 2016 recipient of the VLDB Early Career Award, "for advancing the state of the art of knowledge fusion". She is the 2023 recipient of the VLDB Women in Database Research Award. She was named an IEEE and ACM Fellow for contributions to knowledge graph construction and data integration.
+        </p>
+    </div>
 
     <footer>
         &copy; SKnowLLM Conference Organizers
