extend the deadlines

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     We invite researchers working on structured data retrieval and reasoning with Large Language Models (LLMs) to submit their latest original research work to the KDD 2025 workshop on Structured Knowledge for Large Language Models
     <ul class="custom-bullet-list">
     <li>Submission link: <a href="https://openreview.net/group?id=KDD.org/2025/Workshop/SKnow-LLM" target="_blank">Open Review</a></li>
-    <li>Submission deadline: May 8th, 2025 (11:59 pm AoE)</li>
-    <li>Acceptance notification: June 8th, 2025 (anytime before 11:59 pm AoE)</li>
+    <li>Submission deadline: May 25th, 2025 (11:59 pm AoE)</li>
+    <li>Acceptance notification: June 15th, 2025 (anytime before 11:59 pm AoE)</li>
     <li>Workshop date: August 3rd or 4th, 2025</li>
     </ul>
     For any questions, please reach out to us at <a href="mailto:sknowllm@conference.org">sknowllm-organizers@googlegroups.com</a>.
@@ -58,7 +58,7 @@
         <li>LLMs for reasoning, and generation tasks for structured data</li>
     </ul>
 
-    <h2> Submission Insutrctions </h2>
+    <h2> Submission Instructions </h2>
     
     <ul class="custom-bullet-list">
     <li>Papers should be between 4 to 8 pages excluding references and appendices.</li>
