update deadline to may30

--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
     We invite researchers working on structured data retrieval and reasoning with Large Language Models (LLMs) to submit their latest original research work to the KDD 2025 workshop on Structured Knowledge for Large Language Models
     <ul class="custom-bullet-list">
     <li>Submission link: <a href="https://openreview.net/group?id=KDD.org/2025/Workshop/SKnow-LLM" target="_blank">Open Review</a></li>
-    <li>Submission deadline: May 26th, 2025 (11:59 pm AoE)</li>
-    <li>Acceptance notification: June 15th, 2025 (anytime before 11:59 pm AoE)</li>
+    <li> 
+        Submission deadline: <span style="text-decoration: line-through; color: #888;">May 26th, 2025 (11:59 pm AoE)</span>
+        &nbsp;&mdash;&nbsp;
+    <strong>May 30th, 2025 (11:59 pm AoE)</strong> 
+    </li>
+    <li>Acceptance notification: June 24th, 2025 (anytime before 11:59 pm AoE)</li>
     <li>Workshop time: August 4th, 1pm to 5pm, 2025</li>
     </ul>
     For any questions, please reach out to us at <a href="mailto:sknowllm@conference.org">sknowllm-organizers@googlegroups.com</a>.
